--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -85,22 +85,22 @@ DecimalGridSizes=1000.000000
 DecimalGridSizes=5000.000000
 DecimalGridSizes=32.000000
 DecimalGridSizes=64.000000
-CurrentPosGridSize=9
+CurrentPosGridSize=8
 CurrentRotGridSize=6
 
 [MRU]
-MRUItem0=/Game/Levels/Level6
-MRUItem1=/Game/Levels/Level5
-MRUItem2=/Game/Levels/Level4
-MRUItem3=/Game/Levels/Level3
-MRUItem4=/Game/Levels/Level2
+MRUItem0=/Game/Levels/TylerLevel3
+MRUItem1=/Game/Levels/TylerLevel1
+MRUItem2=/Game/Levels/TylerLevel2
+MRUItem3=/Game/Levels/BaseLevel
+MRUItem4=/Game/Levels/Level6
 MRUItem5=/Game/Levels/Level1
-MRUItem6=/Game/Levels/BaseLevel
-MRUItem7=/Game/Levels/MainMenu
-MRUItem8=/Game/Levels/BaseLevel_5
-MRUItem9=/Game/Levels/Level_2
-MRUItem10=/Game/Levels/PrototypeLevel
-MRUItem11=/Game/Levels/2DSideScrollerExampleMap
+MRUItem6=/Game/Levels/Level5
+MRUItem7=/Game/Levels/Level4
+MRUItem8=/Game/Levels/Level3
+MRUItem9=/Game/Levels/Level2
+MRUItem10=/Game/Levels/MainMenu
+MRUItem11=/Game/Levels/BaseLevel_5
 
 [LevelSequenceEditor SequencerSettings]
 AutoChangeMode=None
@@ -160,15 +160,13 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Audio
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 
 [EditorStartup]
-LastLevel=/Game/Levels/Level6
+LastLevel=/Game/Levels/TylerLevel3
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/Widgets/HUDWidget.HUDWidget
-OpenAssetsAtExit=/Game/Blueprints/Widgets/PauseWidget.PauseWidget
+CleanShutdown=True
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1906,9 +1904,9 @@ SoundWave.Effects=True
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object.Collision.BodyInstance\" "
-Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+SceneComponent=
+ActorComponent=
+Object=
 StaticMeshActor=
 2DSideScrollerCharacter_C=
 PaperCharacter=
@@ -1973,11 +1971,11 @@ Bullet_C=
 ProgressBar="\"Object.Render Transform.RenderTransform\" "
 TimerWidget_C="\"Object.Render Transform.RenderTransform\" "
 GameModeBase="\"Object.\" \"Object.\" "
-Info="\"Object.\" \"Object.\" "
+Info="\"Object.Atmosphere.AtmosphericFogComponent.Object.DefaultLightColor\" "
 HUDWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 GeometryCacheComponent="\"Object.Collision.BodyInstance\" "
 NewTarget_C=
-Target_C="\"Object.Default.\" "
+Target_C="\"Object.Default.Waypoints\" "
 AtmosphericFog="\"Object.Atmosphere.AtmosphericFogComponent.Object.DefaultLightColor\" "
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstScale\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSpawnBase="\"Object.Spawn.SpawnPerUnit\" \"Object.Spawn.SpawnPerUnit.Distribution\" "
@@ -2033,28 +2031,29 @@ TileCornerSlanted_C="\"Object.Default.Waypoints\" "
 TileEmptySlanted_C="\"Object.Default.Waypoints\" "
 TileWallSlanted1_C="\"Object.Default.Waypoints\" "
 TileWallSlanted2_C="\"Object.Default.Waypoints\" "
+TileCrossSection_C="\"Object.Default.Waypoints\" "
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprints/Tiles/TileWallSlanted1.TileWallSlanted1;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileWallSlanted2.TileWallSlanted2;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileEmptySlanted.TileEmptySlanted;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileWallConnectedCorner1.TileWallConnectedCorner1;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileWallConnectedCorner2.TileWallConnectedCorner2;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileCornerSlanted.TileCornerSlanted;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleSlantCorner.TileTriangleSlantCorner;
-RecentlyPlaced=/Game/Sprites/TileTriangleSlantCorner.TileTriangleSlantCorner;
-RecentlyPlaced=/Game/Blueprints/MovementWaypoint.MovementWaypoint;
 RecentlyPlaced=/Game/Blueprints/Target.Target;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleEmpty.TileTriangleEmpty;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleWall2.TileTriangleWall2;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleWall1.TileTriangleWall1;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileDoubleWall.TileDoubleWall;
+RecentlyPlaced=/Game/Blueprints/MovementWaypoint.MovementWaypoint;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileSingle.TileSingle;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileWallSlanted2.TileWallSlanted2;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileWallSlanted1.TileWallSlanted1;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileTJunction.TileTJunction;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleConnectedCorner.TileTriangleConnectedCorner;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleWall2.TileTriangleWall2;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileSingle.TileSingle;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileCorner.TileCorner;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleEmpty.TileTriangleEmpty;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileEnd.TileEnd;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleSingle.TileTriangleSingle;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleWall1.TileTriangleWall1;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileCorner.TileCorner;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileConnectedCorner.TileConnectedCorner;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileWall.TileWall;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileEmpty.TileEmpty;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileEmptySlanted.TileEmptySlanted;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileWallConnectedCorner1.TileWallConnectedCorner1;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileCrossSection.TileCrossSection;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileWallConnectedCorner2.TileWallConnectedCorner2;
 
 [DetailCategoriesAdvanced]
 StaticMeshComponent.Physics=False
@@ -2097,8 +2096,8 @@ UNR=../../../../../../Users/Tyler/Documents/GitHub/mgp-mgp-group-11/Development/
 BRUSH=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 FBX=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 FBXAnim=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
-GenericImport=../../../../../../Users/Tyler/Desktop/ShootSound.wav
-GenericExport=../../../../../../Users/Tyler/Desktop/TileSet.TGA
+GenericImport=../../../../../../Users/Tyler/Desktop/274751__kwahmah-02__glass-bowl-1.wav
+GenericExport=../../../../../../Users/Tyler/Desktop/Background.TGA
 GenericOpen=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 GenericSave=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 MeshImportExport=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
