Added 3 levels, changed some minor balancing on others. More feedback required to iterate further.

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,18 +89,18 @@ CurrentPosGridSize=8
 CurrentRotGridSize=6
 
 [MRU]
-MRUItem0=/Game/Levels/TylerLevel3
-MRUItem1=/Game/Levels/TylerLevel1
-MRUItem2=/Game/Levels/TylerLevel2
-MRUItem3=/Game/Levels/BaseLevel
-MRUItem4=/Game/Levels/Level6
-MRUItem5=/Game/Levels/Level1
-MRUItem6=/Game/Levels/Level5
-MRUItem7=/Game/Levels/Level4
-MRUItem8=/Game/Levels/Level3
-MRUItem9=/Game/Levels/Level2
-MRUItem10=/Game/Levels/MainMenu
-MRUItem11=/Game/Levels/BaseLevel_5
+MRUItem0=/Game/Levels/JoeLevel3
+MRUItem1=/Game/Levels/JoeLevel2
+MRUItem2=/Game/Levels/JoeLevel1
+MRUItem3=/Game/Levels/TylerLevel1
+MRUItem4=/Game/Levels/Level4
+MRUItem5=/Game/Levels/Level2
+MRUItem6=/Game/Levels/Level1
+MRUItem7=/Game/Levels/BaseLevel
+MRUItem8=/Game/Levels/TylerLevel2
+MRUItem9=/Game/Levels/Level3
+MRUItem10=/Game/Levels/TylerLevel3
+MRUItem11=/Game/Levels/MainMenu
 
 [LevelSequenceEditor SequencerSettings]
 AutoChangeMode=None
@@ -160,10 +160,10 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 
 [EditorStartup]
-LastLevel=/Game/Levels/TylerLevel3
+LastLevel=/Game/Levels/JoeLevel3
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1904,8 +1904,8 @@ SoundWave.Effects=True
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" "
-SceneComponent=
-ActorComponent=
+SceneComponent="\"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.Collision.BodyInstance\" "
 Object=
 StaticMeshActor=
 2DSideScrollerCharacter_C=
@@ -2034,26 +2034,26 @@ TileWallSlanted2_C="\"Object.Default.Waypoints\" "
 TileCrossSection_C="\"Object.Default.Waypoints\" "
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprints/Target.Target;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleEmpty.TileTriangleEmpty;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleWall2.TileTriangleWall2;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleWall1.TileTriangleWall1;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileDoubleWall.TileDoubleWall;
 RecentlyPlaced=/Game/Blueprints/MovementWaypoint.MovementWaypoint;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleSingle.TileTriangleSingle;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileDoubleWall.TileDoubleWall;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleWall1.TileTriangleWall1;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleWall2.TileTriangleWall2;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleSlantCorner.TileTriangleSlantCorner;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleConnectedCorner.TileTriangleConnectedCorner;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTJunction.TileTJunction;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileWall.TileWall;
+RecentlyPlaced=/Game/Blueprints/Target.Target;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileBlueprint.TileBlueprint;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileEnd.TileEnd;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleEmpty.TileTriangleEmpty;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileSingle.TileSingle;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileWallSlanted2.TileWallSlanted2;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileWallSlanted1.TileWallSlanted1;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTJunction.TileTJunction;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleConnectedCorner.TileTriangleConnectedCorner;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileEnd.TileEnd;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileCorner.TileCorner;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileConnectedCorner.TileConnectedCorner;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileWall.TileWall;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileEmpty.TileEmpty;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileEmptySlanted.TileEmptySlanted;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileWallConnectedCorner1.TileWallConnectedCorner1;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileCrossSection.TileCrossSection;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileWallConnectedCorner2.TileWallConnectedCorner2;
 
 [DetailCategoriesAdvanced]
 StaticMeshComponent.Physics=False
@@ -2092,7 +2092,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Tyler/Documents/GitHub/mgp-mgp-group-11/Development/Unreal Project/Content/Levels
+UNR=../../../../../../Users/Joseph/Desktop/Kazu-10/mgp-mgp-group-11/Development/Unreal Project/Content/Levels
 BRUSH=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 FBX=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 FBXAnim=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
@@ -2660,6 +2660,10 @@ Cascade.TimeStamp=2017.10.01-15.07.25
 Cascade.LastCompileMethod=External
 DistCurveEditor.TimeStamp=2017.10.01-15.07.28
 DistCurveEditor.LastCompileMethod=External
+SynthBenchmark.TimeStamp=2017.09.26-10.10.47
+SynthBenchmark.LastCompileMethod=Unknown
+NewLevelDialog.TimeStamp=2017.09.26-10.10.42
+NewLevelDialog.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
