Updated Level order, Added touch input
Improved text readability

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,7 +50,7 @@ MultipleInstanceLastWidth=540
 LastExecutedLaunchDevice=WindowsNoEditor@JOSEPH-PC
 LastExecutedLaunchName=JOSEPH-PC
 LastExecutedPIEPreviewDevice=
-NewWindowPosition=(X=685,Y=23)
+NewWindowPosition=(X=685,Y=28)
 NewWindowWidth=540
 NewWindowHeight=960
 StandaloneWindowWidth=540
@@ -90,17 +90,17 @@ CurrentRotGridSize=6
 
 [MRU]
 MRUItem0=/Game/Levels/JoeLevel3
-MRUItem1=/Game/Levels/JoeLevel2
-MRUItem2=/Game/Levels/JoeLevel1
-MRUItem3=/Game/Levels/TylerLevel1
-MRUItem4=/Game/Levels/Level4
-MRUItem5=/Game/Levels/Level2
-MRUItem6=/Game/Levels/Level1
-MRUItem7=/Game/Levels/BaseLevel
-MRUItem8=/Game/Levels/TylerLevel2
-MRUItem9=/Game/Levels/Level3
-MRUItem10=/Game/Levels/TylerLevel3
-MRUItem11=/Game/Levels/MainMenu
+MRUItem1=/Game/Levels/TylerLevel3
+MRUItem2=/Game/Levels/MainMenu
+MRUItem3=/Game/Levels/Level4
+MRUItem4=/Game/Levels/Level5
+MRUItem5=/Game/Levels/JoeLevel1
+MRUItem6=/Game/Levels/TylerLevel1
+MRUItem7=/Game/Levels/Tutorial3
+MRUItem8=/Game/Levels/Tutorial2
+MRUItem9=/Game/Levels/Tutorial1
+MRUItem10=/Game/Levels/Level3
+MRUItem11=/Game/Levels/Level2
 
 [LevelSequenceEditor SequencerSettings]
 AutoChangeMode=None
@@ -166,7 +166,12 @@ ContentBrowserTab1.SelectedPaths=/Game/Levels
 LastLevel=/Game/Levels/JoeLevel3
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/Widgets/GameOverScreenWidget.GameOverScreenWidget
+OpenAssetsAtExit=/Game/Blueprints/BounceGamemode.BounceGamemode
+OpenAssetsAtExit=/Game/Blueprints/Widgets/LevelButtonWidget.LevelButtonWidget
+OpenAssetsAtExit=/Game/Blueprints/Widgets/LevelSelectWidget.LevelSelectWidget
+OpenAssetsAtExit=/Game/Blueprints/Widgets/PauseWidget.PauseWidget
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1725,6 +1730,17 @@ SoundWave.Debug=True
 SoundWave.Concurrency=True
 SoundWave.Attenuation=True
 SoundWave.Effects=True
+WorldSettings.World=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.Physics=True
+WorldSettings.Rendering=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.Audio=True
+WorldSettings.LODSystem=True
+WorldSettings.VR=True
+WorldSettings.Tick=True
+K2Node_InputTouch.Input=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
@@ -1906,7 +1922,7 @@ MeshComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" "
 SceneComponent="\"Object.Collision.BodyInstance\" "
 ActorComponent="\"Object.Collision.BodyInstance\" "
-Object=
+Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 StaticMeshActor=
 2DSideScrollerCharacter_C=
 PaperCharacter=
@@ -1921,10 +1937,10 @@ LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridSizes\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HUD_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
-UserWidget=
+UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PaperTileSet="\"Object.TileSet.AdditionalSourceTextures\" \"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[15]\" \"Object.Sprite.PerTileData.PerTileData[16]\" \"Object.Sprite.PerTileData.PerTileData[17]\" \"Object.Sprite.PerTileData.PerTileData[20]\" \"Object.Sprite.PerTileData.PerTileData[21]\" \"Object.Sprite.PerTileData.PerTileData[22]\" \"Object.Sprite.PerTileData.PerTileData[23]\" \"Object.Sprite.PerTileData.PerTileData[24]\" "
 MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[0].Object.ParameterValue\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1952,9 +1968,9 @@ LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.Tra
 PaperSpriteComponent="\"Object.Collision.BodyInstance\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Cannon_C=
-LevelButtonWidget_C=
+LevelButtonWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 MultiLineEditableTextBox="\"Object.Render Transform.RenderTransform\" "
 EditableTextBox="\"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -1970,8 +1986,8 @@ TileBlueprint_C="\"Object.Default.Waypoints\" "
 Bullet_C=
 ProgressBar="\"Object.Render Transform.RenderTransform\" "
 TimerWidget_C="\"Object.Render Transform.RenderTransform\" "
-GameModeBase="\"Object.\" \"Object.\" "
-Info="\"Object.Atmosphere.AtmosphericFogComponent.Object.DefaultLightColor\" "
+GameModeBase="\"Object.Levels\" \"Object.Levels\" "
+Info=
 HUDWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 GeometryCacheComponent="\"Object.Collision.BodyInstance\" "
 NewTarget_C=
@@ -2010,7 +2026,7 @@ CameraShake="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscil
 ParticleModuleTrailSource="\"Object.Source.SourceStrength.Distribution\" "
 ParticleModuleTrailBase="\"Object.Source.SourceStrength.Distribution\" "
 ParticleModuleSpawnPerUnit="\"Object.Spawn.SpawnPerUnit\" \"Object.Spawn.SpawnPerUnit.Distribution\" "
-BounceGamemode_C="\"Object.\" \"Object.\" "
+BounceGamemode_C="\"Object.Levels\" \"Object.Levels\" "
 TileDoubleWall_C="\"Object.Default.Waypoints\" "
 TileEnd_C="\"Object.Default.Waypoints\" "
 TileWall_C="\"Object.Default.Waypoints\" "
@@ -2035,17 +2051,17 @@ TileCrossSection_C="\"Object.Default.Waypoints\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/MovementWaypoint.MovementWaypoint;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleSingle.TileTriangleSingle;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTJunction.TileTJunction;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileDoubleWall.TileDoubleWall;
+RecentlyPlaced=/Game/Blueprints/Target.Target;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileEnd.TileEnd;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleSingle.TileTriangleSingle;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleWall1.TileTriangleWall1;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleWall2.TileTriangleWall2;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleSlantCorner.TileTriangleSlantCorner;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleConnectedCorner.TileTriangleConnectedCorner;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTJunction.TileTJunction;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileWall.TileWall;
-RecentlyPlaced=/Game/Blueprints/Target.Target;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileBlueprint.TileBlueprint;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileEnd.TileEnd;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleEmpty.TileTriangleEmpty;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileSingle.TileSingle;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileWallSlanted2.TileWallSlanted2;
