Added Icons, Loading Screen, and packaging settings

--- a/Development/Unreal Project/Config/DefaultEngine.ini
+++ b/Development/Unreal Project/Config/DefaultEngine.ini
@@ -196,3 +196,10 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+Orientation=Portrait
+bDisableVerifyOBBOnStartUp=True
+bPackageDataInsideApk=True
+ApplicationDisplayName=KAZU-10
+bFullScreen=True
+
