--- a/Development/Unreal Project/Config/DefaultGame.ini
+++ b/Development/Unreal Project/Config/DefaultGame.ini
@@ -5,3 +5,67 @@ ProjectName=Group11Project
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack,PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Development
+StagingDirectory=(Path="C:/Users/Games/Desktop/Test G11")
+FullRebuild=False
+ForDistribution=False
+IncludeDebugFiles=False
+BlueprintNativizationMethod=Disabled
+bWarnIfPackagedWithoutNativizationFlag=True
+UsePakFile=True
+bGenerateChunks=False
+bGenerateNoChunks=False
+bChunkHardReferencesOnly=False
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path="")
+HttpChunkInstallDataVersion=
+IncludePrerequisites=True
+IncludeAppLocalPrerequisites=False
+bShareMaterialShaderCode=False
+bSharedMaterialNativeLibraries=False
+ApplocalPrerequisitesDirectory=(Path="")
+IncludeCrashReporter=False
+InternationalizationPreset=English
+-CulturesToStage=en
++CulturesToStage=en
+DefaultCulture=en
+bCookAll=False
+bCookMapsOnly=False
+bCompressed=False
+bEncryptIniFiles=False
+bEncryptPakIndex=False
+bSkipEditorContent=False
+-MapsToCook=(FilePath="/Game/Levels/MainMenu")
+-MapsToCook=(FilePath="/Game/Levels/JoeLevel1")
+-MapsToCook=(FilePath="/Game/Levels/JoeLevel2")
+-MapsToCook=(FilePath="/Game/Levels/JoeLevel3")
+-MapsToCook=(FilePath="/Game/Levels/Level1")
+-MapsToCook=(FilePath="/Game/Levels/Level3")
+-MapsToCook=(FilePath="/Game/Levels/Level5")
+-MapsToCook=(FilePath="/Game/Levels/Level4")
+-MapsToCook=(FilePath="/Game/Levels/Level6")
+-MapsToCook=(FilePath="/Game/Levels/Tutorial1")
+-MapsToCook=(FilePath="/Game/Levels/Tutorial2")
+-MapsToCook=(FilePath="/Game/Levels/Tutorial3")
+-MapsToCook=(FilePath="/Game/Levels/TylerLevel1")
+-MapsToCook=(FilePath="")
++MapsToCook=(FilePath="/Game/Levels/MainMenu")
++MapsToCook=(FilePath="/Game/Levels/JoeLevel1")
++MapsToCook=(FilePath="/Game/Levels/JoeLevel2")
++MapsToCook=(FilePath="/Game/Levels/JoeLevel3")
++MapsToCook=(FilePath="/Game/Levels/Level1")
++MapsToCook=(FilePath="/Game/Levels/Level3")
++MapsToCook=(FilePath="/Game/Levels/Level5")
++MapsToCook=(FilePath="/Game/Levels/Level4")
++MapsToCook=(FilePath="/Game/Levels/Level6")
++MapsToCook=(FilePath="/Game/Levels/Tutorial1")
++MapsToCook=(FilePath="/Game/Levels/Tutorial2")
++MapsToCook=(FilePath="/Game/Levels/Tutorial3")
++MapsToCook=(FilePath="/Game/Levels/TylerLevel1")
++MapsToCook=(FilePath="/Game/Levels/TylerLevel3")
+bNativizeBlueprintAssets=False
+bNativizeOnlySelectedBlueprints=False
+
+
