Reduced size of menu background

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -167,8 +167,6 @@ LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Materials/MenuBackgroundMaterial.MenuBackgroundMaterial
-OpenAssetsAtExit=/Game/Blueprints/Widgets/BackgroundWidget.BackgroundWidget
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1912,6 +1910,7 @@ K2Node_InputTouch.Input=True
 /Game/Sprites/TileSingle.TileSingle=1
 /Game/Audio/BulletDestroy.BulletDestroy=1
 /Game/Textures/GameOverScreenPictures/background.Background=1
+/Game/Materials/MenuBackgroundMaterial.MenuBackgroundMaterial=1
 
 [DetailPropertyExpansion]
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
@@ -1919,7 +1918,7 @@ MeshComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" "
 SceneComponent="\"Object.Collision.BodyInstance\" "
 ActorComponent="\"Object.Collision.BodyInstance\" "
-Object="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object=
 StaticMeshActor=
 2DSideScrollerCharacter_C=
 PaperCharacter=
