Fixed main menu lagging over time

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -167,6 +167,7 @@ LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Materials/MenuBackgroundMaterial.MenuBackgroundMaterial
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -2083,7 +2084,7 @@ Texture2D.LevelOfDetail=False
 PreviewMaterial.Material=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=LoadErrors
 
 [RootWindow]
 ScreenPosition=X=427.000 Y=139.000
