Updated Title Font

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -168,6 +168,8 @@ LastLevel=/Game/Levels/MainMenu
 [AssetEditorManager]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Materials/MenuBackgroundMaterial.MenuBackgroundMaterial
+OpenAssetsAtExit=/Game/Blueprints/Widgets/BackgroundWidget.BackgroundWidget
+OpenAssetsAtExit=/Game/Blueprints/Widgets/MainMenuWidget.MainMenuWidget
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1912,6 +1914,8 @@ K2Node_InputTouch.Input=True
 /Game/Audio/BulletDestroy.BulletDestroy=1
 /Game/Textures/GameOverScreenPictures/background.Background=1
 /Game/Materials/MenuBackgroundMaterial.MenuBackgroundMaterial=1
+/Game/Textures/MainMenuPictures/TitleText.TitleText=0
+/Game/Textures/MainMenuPictures/TitleImage.TitleImage=0
 
 [DetailPropertyExpansion]
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
@@ -1919,7 +1923,7 @@ MeshComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" "
 SceneComponent="\"Object.Collision.BodyInstance\" "
 ActorComponent="\"Object.Collision.BodyInstance\" "
-Object=
+Object="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 StaticMeshActor=
 2DSideScrollerCharacter_C=
 PaperCharacter=
@@ -1965,7 +1969,7 @@ LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.Tra
 PaperSpriteComponent="\"Object.Collision.BodyInstance\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Cannon_C=
 LevelButtonWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 MultiLineEditableTextBox="\"Object.Render Transform.RenderTransform\" "
@@ -2081,7 +2085,7 @@ BoxComponent.Collision=False
 PaperSprite.Collision=True
 Texture2D.Compositing=True
 Texture2D.LevelOfDetail=False
-PreviewMaterial.Material=False
+PreviewMaterial.Material=True
 
 [MessageLog]
 LastLogListing=LoadErrors
