Updated other title fonts

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -170,6 +170,9 @@ CleanShutdown=False
 OpenAssetsAtExit=/Game/Materials/MenuBackgroundMaterial.MenuBackgroundMaterial
 OpenAssetsAtExit=/Game/Blueprints/Widgets/BackgroundWidget.BackgroundWidget
 OpenAssetsAtExit=/Game/Blueprints/Widgets/MainMenuWidget.MainMenuWidget
+OpenAssetsAtExit=/Game/Blueprints/Widgets/LevelSelectWidget.LevelSelectWidget
+OpenAssetsAtExit=/Game/Blueprints/Widgets/HelpWidget.HelpWidget
+OpenAssetsAtExit=/Game/Blueprints/Widgets/OptionsWidget.OptionsWidget
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
