Added replay button to pause menu

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,12 +89,12 @@ CurrentPosGridSize=8
 CurrentRotGridSize=6
 
 [MRU]
-MRUItem0=/Game/Levels/Level5
-MRUItem1=/Game/Levels/Level2
-MRUItem2=/Game/Levels/Level3
-MRUItem3=/Game/Levels/Level4
-MRUItem4=/Game/Levels/TylerLevel1
-MRUItem5=/Game/Levels/Tutorial1
+MRUItem0=/Game/Levels/Tutorial1
+MRUItem1=/Game/Levels/Level5
+MRUItem2=/Game/Levels/Level2
+MRUItem3=/Game/Levels/Level3
+MRUItem4=/Game/Levels/Level4
+MRUItem5=/Game/Levels/TylerLevel1
 MRUItem6=/Game/Levels/JoeLevel3
 MRUItem7=/Game/Levels/TylerLevel3
 MRUItem8=/Game/Levels/MainMenu
@@ -163,7 +163,7 @@ AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Levels
 
 [EditorStartup]
-LastLevel=/Game/Levels/MainMenu
+LastLevel=/Game/Levels/Tutorial1
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -173,6 +173,7 @@ OpenAssetsAtExit=/Game/Blueprints/Widgets/MainMenuWidget.MainMenuWidget
 OpenAssetsAtExit=/Game/Blueprints/Widgets/LevelSelectWidget.LevelSelectWidget
 OpenAssetsAtExit=/Game/Blueprints/Widgets/HelpWidget.HelpWidget
 OpenAssetsAtExit=/Game/Blueprints/Widgets/OptionsWidget.OptionsWidget
+OpenAssetsAtExit=/Game/Blueprints/Widgets/PauseWidget.PauseWidget
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1991,7 +1992,7 @@ Bullet_C=
 ProgressBar="\"Object.Render Transform.RenderTransform\" "
 TimerWidget_C="\"Object.Render Transform.RenderTransform\" "
 GameModeBase="\"Object.Levels\" \"Object.Levels\" "
-Info=
+Info="\"Object.Atmosphere.AtmosphericFogComponent.Object.DefaultLightColor\" "
 HUDWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 GeometryCacheComponent="\"Object.Collision.BodyInstance\" "
 NewTarget_C=
